@@ -104,7 +104,6 @@ extern "C" {
 
 #define HAS_MMX					0x01000000
 #define SCREEN_EXIT				0x80000000
-#define SCREEN_LOCKED			0x00000001
 #define PRINT_SCROLL_WAS_OFF	0x00000004
 #define ALPHA_PRIMITIVES		0x00000008
 #define OPENGL_PRIMITIVES		0x00000010
